k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bcs-bot-svc
  namespace: bcs-bot
spec:
  type: ClusterIP
  selector:
    app: bcs-bot
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
